--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -6,6 +6,10 @@ data:
       - system:nodes
       rolearn: arn:aws:iam::031855262422:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-4THCTUSSIZFI
       username: system:node:{{EC2PrivateDNSName}}
+    - groups:
+      - system:masters
+      rolearn: arn:aws:iam::031855262422:role/UdacityFlaskDeployCBKubectlRole
+      username: build
   mapUsers: |
     []
 kind: ConfigMap
