--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,6 +15,9 @@ phases:
       - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' simple_jwt_api.yml
       - $(aws ecr get-login --no-include-email)
       - export KUBECONFIG=$HOME/.kube/config
+      - pip3
+      - pip install -r requirements.txt
+      - python test_main.py
   build:
     commands:
       - docker build --tag $REPOSITORY_URI:$TAG .
