Adding env_file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
       - export KUBECONFIG=$HOME/.kube/config
       - pip3
       - pip install -r requirements.txt
-      - python test_main.py
+      - pytest test_main.py
   build:
     commands:
       - docker build --tag $REPOSITORY_URI:$TAG .
